--- a/css/hud.css
+++ b/css/hud.css
@@ -21,8 +21,6 @@
 }
 
 .conversation-hud-content {
-  margin-left: auto;
-  margin-right: auto;
   margin: auto;
 
   display: flex;
@@ -50,7 +48,9 @@
   justify-content: center;
   position: relative;
   height: 65vh;
-  width: 420px;
+  max-height: 650px;
+  width: 30vw;
+  max-width: 420px;
 }
 .conversation-hud-wrapper.visible .conversation-hud-active-participant {
   display: flex;
@@ -123,9 +123,12 @@
 .conversation-hud-participant-list {
   display: none;
   flex-flow: column;
+  justify-content: center;
+  align-items: center;
   margin-left: 50px;
 
-  max-height: 65vh;
+  height: 65vh;
+  max-height: 650px;
   overflow-y: auto;
   padding: 0px 10px;
 }
@@ -134,6 +137,11 @@
 }
 .conversation-hud-wrapper.minimized .conversation-hud-participant-list {
   margin-top: 25px;
+}
+@media only screen and (max-width: 1150px) {
+  .conversation-hud-participant-list {
+    margin-left: 20px;
+  }
 }
 
 .conversation-participant {
@@ -198,16 +206,19 @@
   font-size: 12px;
 
   background-color: rgba(0, 0, 0, 0.65);
-  border-left: 1px solid var(--color-border-dark);
   border-bottom: 1px solid var(--color-border-dark);
 }
 .conversation-participant-edit {
+  border-right: 1px solid var(--color-border-dark);
   top: 0;
   left: 0;
+  border-radius: 0px 0px 5px 0px;
 }
 .conversation-participant-remove {
+  border-left: 1px solid var(--color-border-dark);
   top: 0;
   right: 0;
+  border-radius: 0px 0px 0px 5px;
 }
 
 .conversation-participant > i {
