--- a/css/hud.css
+++ b/css/hud.css
@@ -52,10 +52,24 @@
   align-items: center;
   justify-content: center;
   position: relative;
+}
+.conversation-hud-active-participant.vertical {
   height: 100%;
   width: 30vw;
   max-width: 420px;
 }
+.conversation-hud-active-participant.horizontal {
+  width: 40vw;
+  max-width: 620px;
+  aspect-ratio: 16/9;
+}
+.conversation-hud-active-participant.square {
+  width: min(30vw, 50vh);
+  height: min(30vw, 50vh);
+  max-width: 620px;
+  max-height: 620px;
+}
+
 .conversation-hud-wrapper.visible .conversation-hud-active-participant {
   display: flex;
 }
@@ -86,42 +100,17 @@
   box-shadow: unset;
 }
 
-.active-participant-image {
-  display: none;
-  background-color: rgba(0, 0, 0, 0.5);
+.conversation-participant img.top,
+.conversation-hud-active-participant img.top {
+  object-position: top center;
 }
-.active-participant-image.active {
-  display: block;
+.conversation-participant img.center,
+.conversation-hud-active-participant img.center {
+  object-position: center;
 }
-
-.active-participant-name {
-  display: none;
-  position: absolute;
-
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  margin: 0;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
-
-  overflow: hidden;
-  white-space: nowrap;
-
-  font-size: 16px;
-  text-align: center;
-  color: var(--color-text-light-highlight);
-  text-overflow: ellipsis;
-
-  background-color: rgba(0, 0, 0, 0.65);
-  border-top: 1px solid var(--color-border-dark);
-  border-radius: 0px 0px 15px 15px;
-}
-.active-participant-name.active {
-  display: block;
+.conversation-participant img.bottom,
+.conversation-hud-active-participant img.bottom {
+  object-position: bottom center;
 }
 
 .conversation-hud-participant-list {
