--- a/css/active-participant.css
+++ b/css/active-participant.css
@@ -1,3 +1,52 @@
+.conversation-hud-active-participant {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+/* Portrait types */
+.conversation-hud-active-participant.vertical {
+  height: 100%;
+  width: 30vw;
+  max-width: 420px;
+}
+.conversation-hud-active-participant.horizontal {
+  width: 40vw;
+  max-width: 620px;
+  aspect-ratio: 16/9;
+}
+.conversation-hud-active-participant.square {
+  width: min(30vw, 50vh);
+  height: min(30vw, 50vh);
+  max-width: 620px;
+  max-height: 620px;
+}
+
+.conversation-hud-active-participant img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: top center;
+  border-radius: 15px;
+  box-shadow: 0 0 10px var(--color-shadow-dark);
+}
+
+/* CSS rules for image anchor */
+.conversation-participant img.top,
+.conversation-hud-active-participant img.top {
+  object-position: top center;
+}
+.conversation-participant img.center,
+.conversation-hud-active-participant img.center {
+  object-position: center;
+}
+.conversation-participant img.bottom,
+.conversation-hud-active-participant img.bottom {
+  object-position: bottom center;
+}
+
 .active-participant-image {
   display: none;
   background-color: rgba(0, 0, 0, 0.5);
@@ -36,6 +85,7 @@
   display: block;
 }
 
+/* Font sizes */
 .active-participant-name.verySmall {
   font-size: 10px;
 }
