--- a/css/hud.css
+++ b/css/hud.css
@@ -46,30 +46,6 @@
   max-height: calc(100vh - 54px - 62px);
 }
 
-.conversation-hud-active-participant {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-.conversation-hud-active-participant.vertical {
-  height: 100%;
-  width: 30vw;
-  max-width: 420px;
-}
-.conversation-hud-active-participant.horizontal {
-  width: 40vw;
-  max-width: 620px;
-  aspect-ratio: 16/9;
-}
-.conversation-hud-active-participant.square {
-  width: min(30vw, 50vh);
-  height: min(30vw, 50vh);
-  max-width: 620px;
-  max-height: 620px;
-}
-
 .conversation-hud-wrapper.visible .conversation-hud-active-participant {
   display: flex;
 }
@@ -88,29 +64,8 @@
   border: 0;
 }
 
-.conversation-hud-active-participant img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  object-position: top center;
-  border-radius: 15px;
-  box-shadow: 0 0 10px var(--color-shadow-dark);
-}
 .conversation-hud-wrapper.minimized .conversation-hud-active-participant img {
   box-shadow: unset;
-}
-
-.conversation-participant img.top,
-.conversation-hud-active-participant img.top {
-  object-position: top center;
-}
-.conversation-participant img.center,
-.conversation-hud-active-participant img.center {
-  object-position: center;
-}
-.conversation-participant img.bottom,
-.conversation-hud-active-participant img.bottom {
-  object-position: bottom center;
 }
 
 .conversation-hud-participant-list {
@@ -334,6 +289,7 @@
   box-shadow: 0 0 10px #9b8dff;
 }
 
+/* Dropzone CSS */
 .conversation-hud-content .conversation-hud-dropzone {
   display: none;
   flex-flow: column;
