Add drag and drop reorder for participants of an active conversation

--- a/css/hud.css
+++ b/css/hud.css
@@ -140,6 +140,10 @@
   height: 100px;
 }
 
+.conversation-participant-gm-wrapper * {
+  pointer-events: none;
+}
+
 .conversation-participant img {
   width: 100px;
   height: 100px;
