--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
 @import url("./hud.css");
 @import url("./active-participant.css");
 @import url("./conversation-sheet.css");
+@import url("./conversation-participant.css");
