--- a/css/hud.css
+++ b/css/hud.css
@@ -129,7 +129,7 @@
   border-bottom: 1px solid var(--color-border-highlight);
   box-shadow: 0 0 10px var(--color-shadow-highlight);
 }
-.conversation-participant.active {
+.participant-drag-drop-container.active .conversation-participant {
   border: 1px solid var(--color-border-highlight-alt);
   border-bottom: 1px solid var(--color-border-highlight);
   box-shadow: 0 0 10px var(--color-shadow-highlight);
