Add framework for adding factions to conversation participants

--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,4 @@
 @import url("./active-participant.css");
 @import url("./conversation-sheet.css");
 @import url("./conversation-participant.css");
+@import url("./add-edit-participant.css");
