--- a/templates/add_edit_participant.hbs
+++ b/templates/add_edit_participant.hbs
@@ -1,22 +1,150 @@
 <form class="flexcol">
-  <div>
-    <div class="form-group">
-      <label>{{localize "CHUD.name"}}</label>
-      <div class="form-fields">
-        <input class="text" type="text" name="name" placeholder="{{localize 'CHUD.newParticipant'}}" value="{{participantData.name}}" />
+  <!-- Sheet Navigation Tabs -->
+  <nav class="sheet-tabs tabs" aria-role="{{localize 'SHEETS.FormNavLabel'}}">
+    <a class="item" data-tab="participant-config">
+      <i class="fas fa-user"></i> {{localize "CHUD.tabs.participantConfig"}}
+    </a>
+    
+    <a class="item" data-tab="faction-config">
+      <i class="fas fa-bookmark"></i> {{localize "CHUD.tabs.factionConfig"}}
+    </a>
+  </nav>
+
+  <div style="margin-top: 20px;">
+    {{!-- PARTICIPANT CONFIG TAB --}}
+    <div class="tab" data-tab="participant-config">
+      <div class="form-group">
+        <label>{{localize "CHUD.name"}}</label>
+        <div class="form-fields">
+          <input class="text" type="text" name="participantName" placeholder="{{localize 'CHUD.newParticipant'}}" value="{{participantName}}" />
+        </div>
+        <p class="notes">{{localize "CHUD.nameHint"}}</p>
       </div>
-      <p class="notes">{{localize "CHUD.nameHint"}}</p>
+
+      <div class="form-group">
+        <label>{{localize "CHUD.portrait"}}</label>
+        <div class="form-fields">
+          <button type="button" class="file-picker" data-type="imagevideo" data-target="participantImg" title="{{localize 'CHUD.browseFiles'}}">
+            <i class="fas fa-file-import fa-fw"></i>
+          </button>
+          <input class="image" type="text" name="participantImg" placeholder="{{localize 'CHUD.filePath'}}" value="{{participantImg}}" />
+        </div>
+        <p class="notes">{{localize "CHUD.portraitHint"}}</p>
+      </div>
     </div>
 
-    <div class="form-group">
-      <label>{{localize "CHUD.portrait"}}</label>
-      <div class="form-fields">
-        <button type="button" class="file-picker" data-type="imagevideo" data-target="img" title="{{localize 'CHUD.browseFiles'}}">
-          <i class="fas fa-file-import fa-fw"></i>
-        </button>
-        <input class="image" type="text" name="img" placeholder="{{localize 'CHUD.filePath'}}" value="{{participantData.img}}" />
+    {{!-- FACTION CONFIG TAB --}}
+    <div class="tab" data-tab="faction-config">
+      {{!-- Faction display toggle --}}
+      <div class="form-group">
+        <label>{{localize "CHUD.faction.displayFaction"}}</label>
+        <div class="form-fields">
+          <input type="checkbox" name="displayFaction" {{checked displayFaction}}>
+        </div>
+        <p class="notes">{{localize "CHUD.faction.displayFactionHint"}}</p>
       </div>
-      <p class="notes">{{localize "CHUD.portraitHint"}}</p>
+
+      {{!-- Faction name --}}
+      <div class="form-group">
+        <label>{{localize "CHUD.faction.factionName"}}</label>
+        <div class="form-fields">
+          <input class="text" type="text" name="factionName" placeholder="{{localize 'CHUD.faction.namePlaceholder'}}" value="{{factionName}}" />
+        </div>
+        <p class="notes">{{localize "CHUD.faction.factionNameHint"}}</p>
+      </div>
+
+      <div class="banner-configuration">
+        <div>
+          {{!-- Faction logo --}}
+          <div class="form-group">
+            <label>{{localize "CHUD.faction.factionLogo"}}</label>
+            <div class="form-fields">
+              <button type="button" class="file-picker" data-type="imagevideo" data-target="factionImg" title="{{localize 'CHUD.browseFiles'}}">
+                <i class="fas fa-file-import fa-fw"></i>
+              </button>
+              <input class="image" type="text" name="factionImg" placeholder="{{localize 'CHUD.filePath'}}" value="{{factionLogo}}" />
+            </div>
+            <p class="notes">{{localize "CHUD.faction.factionLogoHint"}}</p>
+          </div>
+          
+          {{!-- Faction banner toggle --}}
+          <div class="form-group">
+            <label>{{localize "CHUD.faction.displayFactionBanner"}}</label>
+            <div class="form-fields">
+              <input type="checkbox" name="displayFactionBanner" {{checked factionBannerEnabled}}>
+            </div>
+            <p class="notes">{{localize "CHUD.faction.displayFactionBannerHint"}}</p>
+          </div>
+
+          {{!-- Faction banner shape --}}
+          <div class="form-group">
+            <label>{{localize "CHUD.faction.factionBannerShape"}}</label>
+
+            <div class="faction-banner-options-wrapper">
+            {{!-- <div class="faction-banner-options-wrapper"> --}}
+              <button id="shape-1" class="banner-shape-button {{#if (eq factionBannerShape "shape-1")}}active{{/if}}" type="button" name="shape-1">
+                <img src="modules/conversation-hud/img/banner-shapes/shape-1.svg" alt="Banner Shape 1">
+              </button>
+
+              <button id="shape-2" class="banner-shape-button {{#if (eq factionBannerShape "shape-2")}}active{{/if}}" type="button" name="shape-2">
+                <img src="modules/conversation-hud/img/banner-shapes/shape-2.svg" alt="Banner Shape 2">
+              </button>
+
+              <button id="shape-3" class="banner-shape-button {{#if (eq factionBannerShape "shape-3")}}active{{/if}}" type="button" name="shape-3">
+                <img src="modules/conversation-hud/img/banner-shapes/shape-3.svg" alt="Banner Shape 3">
+              </button>
+
+              <button id="shape-4" class="banner-shape-button {{#if (eq factionBannerShape "shape-4")}}active{{/if}}" type="button" name="shape-4">
+                <img src="modules/conversation-hud/img/banner-shapes/shape-4.svg" alt="Banner Shape 4">
+              </button>
+            </div>
+          
+            <p class="notes">{{localize "CHUD.faction.factionBannerShapeHint"}}</p>
+          </div>
+
+          {{!-- Faction banner tint --}}
+          <div class="form-group">
+            <label>{{ localize "CHUD.faction.factionBannerColor" }}</label>
+            <div class="form-fields">
+              <input class="color" type="text" name="factionTint" value="{{factionBannerTint}}" />
+              <input type="color" name="factionTintPicker" value="{{factionBannerTint}}" data-edit="factionTint" />
+            </div>
+            <p class="notes">{{localize "CHUD.faction.factionBannerColorHint"}}</p>
+          </div>
+        </div>
+
+        {{!-- Banner preview --}}
+        <div class="banner-preview-wrapper">
+          <div id="banner-preview-image" class="banner-preview-image {{#if factionBannerEnabled}}has-banner{{/if}}">
+            <img id="banner-preview-logo" src="{{factionLogo}}" alt="Banner Preview Logo">
+
+            {{!-- <div id="banner-preview-flag-wrapper">
+            </div> --}}
+
+            {{#if factionBannerEnabled}}
+              {{#if (eq factionBannerShape "shape-1")}}
+                {{> "modules/conversation-hud/templates/banner-shapes/shape-1.hbs" color=factionBannerTint}}
+              {{/if}}
+
+              {{#if (eq factionBannerShape "shape-2")}}
+                {{> "modules/conversation-hud/templates/banner-shapes/shape-2.hbs" color=factionBannerTint}}
+              {{/if}}
+
+              {{#if (eq factionBannerShape "shape-3")}}
+                {{> "modules/conversation-hud/templates/banner-shapes/shape-3.hbs" color=factionBannerTint}}
+              {{/if}}
+
+              {{#if (eq factionBannerShape "shape-4")}}
+                {{> "modules/conversation-hud/templates/banner-shapes/shape-4.hbs" color=factionBannerTint}}
+              {{/if}}
+            {{/if}}
+
+            {{!-- <img id="banner-preview-flag" src="modules/conversation-hud/img/banner-shapes/shape-1.svg" alt="Banner Preview Flag"> --}}
+          </div>
+
+          <p>{{localize "CHUD.bannerPreview"}}</p>
+        </div>
+      </div>
     </div>
 
     <footer class="sheet-footer flexrow">
