--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 @import url("./hud.css");
 @import url("./active-participant.css");
 @import url("./conversation-sheet.css");
-@import url("./conversation-participant.css");
 @import url("./add-edit-participant.css");
+
+/* CSS for the drag and drop functionality of conversation participants */
+@import url("./drag-and-drop/index.css");
+
+/* CSS for the conversation entry sheet */
+@import url("./conversation-entry-sheet/index.css");
