--- a/templates/add_edit_participant.hbs
+++ b/templates/add_edit_participant.hbs
@@ -1,4 +1,4 @@
-<form class="sheet">
+<form class="sheet participant-add-edit-form">
   {{!-- NAVIGATION TABS --}}
   <nav class="sheet-tabs tabs" aria-role="{{localize 'SHEETS.FormNavLabel'}}">
     <a class="item" data-tab="participant-config">
