--- a/templates/fragments/faction_data_config_tab.hbs
+++ b/templates/fragments/faction_data_config_tab.hbs
@@ -47,7 +47,7 @@
       <div class="form-group">
         <label>{{localize "CHUD.faction.factionBannerShape.name"}}</label>
 
-        <div class="faction-banner-options-wrapper">
+        <div class="banner-options">
           <button id="shape-1" class="banner-shape-button {{#if (eq factionBannerShape "shape-1")}}active{{/if}}" type="button" name="shape-1">
             <img src="modules/conversation-hud/img/banner-shapes/shape-1.svg" alt="Banner Shape 1">
           </button>
