Start work on the CSS rework for the active conversation overlay

--- a/css/drag-and-drop/index.css
+++ b/css/drag-and-drop/index.css
@@ -1,3 +1,5 @@
+/* ----- General CSS for the drag and drop functionality ----- */
+/* #region */
 .drag-drop-indicator {
   height: 2px;
   border-radius: 2px;
@@ -22,8 +24,4 @@
   flex-direction: column;
   position: relative;
 }
-
-.conversation-hud-participant-list.drag-active .conversation-participant-edit,
-.conversation-hud-participant-list.drag-active .conversation-participant-remove {
-  pointer-events: none;
-}
+/* #endregion */
