--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,5 @@
 
 /* CSS for the participant add/edit form */
 @import url("./add-edit-participant-from/index.css");
+
+@import url("./active-conversation/index.css");
