Rework active participant CSS

--- a/css/main.css
+++ b/css/main.css
@@ -7,4 +7,5 @@
 /* CSS for the participant add/edit form */
 @import url("./add-edit-participant-from/index.css");
 
+/* CSS for the active conversation */
 @import url("./active-conversation/index.css");
