Rework the CSS of the conversation wrapper and add misc improvements

--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,6 @@
 
 /* CSS for the active conversation */
 @import url("./active-conversation/index.css");
+
+/* Misc CSS used for various aspects of the module */
+@import url("./misc.css");
