Add or improve tooltips for the active conversation

--- a/templates/fragments/active_participant.hbs
+++ b/templates/fragments/active_participant.hbs
@@ -1,4 +1,4 @@
-<div class="active-participant-wrapper" data-tooltip-direction="UP">
+<div class="active-participant-wrapper" data-tooltip-direction="DOWN">
   {{!-- Faction wrapper --}}
   <div
     class="active-participant-faction {{#unless participant.faction.displayFaction}}faction-disabled{{/unless}}"
