--- a/templates/banner-shapes/shape-5.hbs
+++ b/templates/banner-shapes/shape-5.hbs
@@ -1,3 +1,3 @@
 <svg version="1.1" style="fill: {{color}};" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 576 576" xml:space="preserve">
-  <polygon class="st1" points="288,38 137.7,38 137.7,413 212.9,538 288,413 363.2,538 438.3,413 438.3,38 "/>
+  <path d="M137.7,38h300.6v375c0,0,0,125-150.3,125S137.7,413,137.7,413V38z"/>
 </svg>
