--- a/templates/fragments/faction_wrapper.hbs
+++ b/templates/fragments/faction_wrapper.hbs
@@ -17,5 +17,13 @@
     {{#if (eq faction.factionBannerShape "shape-4")}}
       {{> "modules/conversation-hud/templates/banner-shapes/shape-4.hbs" color=faction.factionBannerTint}}
     {{/if}}
+
+    {{#if (eq faction.factionBannerShape "shape-5")}}
+      {{> "modules/conversation-hud/templates/banner-shapes/shape-5.hbs" color=faction.factionBannerTint}}
+    {{/if}}
+
+    {{#if (eq faction.factionBannerShape "shape-6")}}
+      {{> "modules/conversation-hud/templates/banner-shapes/shape-6.hbs" color=faction.factionBannerTint}}
+    {{/if}}
   {{/if}}
 </div>
