--- a/templates/fragments/active_participant.hbs
+++ b/templates/fragments/active_participant.hbs
@@ -5,7 +5,7 @@
     {{#if displayParticipant}}data-tooltip="{{participant.faction.factionName}}"{{/if}}
   >
     {{> "modules/conversation-hud/templates/fragments/faction_wrapper.hbs" faction=participant.faction}}
-    <p class="faction-name">{{participant.faction.factionName}}</p>
+    <p class="faction-name {{activeParticipantFactionFontSize}}">{{participant.faction.factionName}}</p>
   </div>
 
   {{!-- Participant display --}}
