Rework localization json and fix minor bugs

--- a/templates/add_edit_participant.hbs
+++ b/templates/add_edit_participant.hbs
@@ -24,9 +24,9 @@
     <button type="submit" name="submit">
       <i class="fa fa-check"></i>
       {{#if isEditing}}
-        {{localize "CHUD.editParticipant"}}
+        {{localize "CHUD.actions.participant.edit"}}
       {{else}}
-        {{localize "CHUD.addParticipant"}}
+        {{localize "CHUD.actions.participant.add"}}
       {{/if}}
     </button>
   </footer>
