--- a/templates/fragments/active_participant.hbs
+++ b/templates/fragments/active_participant.hbs
@@ -20,7 +20,7 @@
       </p>
     {{else}}
       <p class="no-participant-text">
-        {{localize 'CHUD.noActiveParticipant'}}
+        {{localize 'CHUD.strings.noActiveParticipant'}}
       </p>
     {{/if}}
   </div>
