--- a/templates/fragments/faction_data_config_tab.hbs
+++ b/templates/fragments/faction_data_config_tab.hbs
@@ -26,10 +26,10 @@
       <div class="form-group">
         <label>{{localize "CHUD.faction.factionLogo.name"}}</label>
         <div class="form-fields">
-          <button type="button" class="file-picker" data-type="imagevideo" data-target="factionImg" title="{{localize 'CHUD.browseFiles'}}">
+          <button type="button" class="file-picker" data-type="imagevideo" data-target="factionImg" title="{{localize 'CHUD.strings.browseFiles'}}">
             <i class="fas fa-file-import fa-fw"></i>
           </button>
-          <input class="image" type="text" name="factionImg" placeholder="{{localize 'CHUD.filePath'}}" value="{{factionLogo}}" />
+          <input class="image" type="text" name="factionImg" placeholder="{{localize 'CHUD.strings.filePath'}}" value="{{factionLogo}}" />
         </div>
         <p class="notes">{{localize "CHUD.faction.factionLogo.hint"}}</p>
       </div>
