--- a/templates/fragments/participant_data_config_tab.hbs
+++ b/templates/fragments/participant_data_config_tab.hbs
@@ -1,20 +1,20 @@
 <div class="tab" data-tab="participant-config">
   <div class="form-group">
-    <label>{{localize "CHUD.name"}}</label>
+    <label>{{localize "CHUD.strings.name"}}</label>
     <div class="form-fields">
-      <input class="text" type="text" name="participantName" placeholder="{{localize 'CHUD.newParticipant'}}" value="{{participantName}}" />
+      <input class="text" type="text" name="participantName" placeholder="{{localize 'CHUD.strings.newParticipant'}}" value="{{participantName}}" />
     </div>
-    <p class="notes">{{localize "CHUD.nameHint"}}</p>
+    <p class="notes">{{localize "CHUD.strings.nameHint"}}</p>
   </div>
 
   <div class="form-group">
-    <label>{{localize "CHUD.portrait"}}</label>
+    <label>{{localize "CHUD.strings.portrait"}}</label>
     <div class="form-fields">
-      <button type="button" class="file-picker" data-type="imagevideo" data-target="participantImg" title="{{localize 'CHUD.browseFiles'}}">
+      <button type="button" class="file-picker" data-type="imagevideo" data-target="participantImg" title="{{localize 'CHUD.strings.browseFiles'}}">
         <i class="fas fa-file-import fa-fw"></i>
       </button>
-      <input class="image" type="text" name="participantImg" placeholder="{{localize 'CHUD.filePath'}}" value="{{participantImg}}" />
+      <input class="image" type="text" name="participantImg" placeholder="{{localize 'CHUD.strings.filePath'}}" value="{{participantImg}}" />
     </div>
-    <p class="notes">{{localize "CHUD.portraitHint"}}</p>
+    <p class="notes">{{localize "CHUD.strings.portraitHint"}}</p>
   </div>
 </div>
