Add localization to strings and add handlers in case of invalid linked documents

--- a/templates/fragments/participant_data_config_tab.hbs
+++ b/templates/fragments/participant_data_config_tab.hbs
@@ -19,10 +19,10 @@
   </div>
 
   <div class="form-group">
-    <label>{{localize "CHUD.strings.linkedNotes"}}</label>
+    <label>{{localize "CHUD.strings.linkedJournal"}}</label>
     <select name="linkedJournal">
       {{ selectOptions journals selected=linkedJournal blank="" nameAttr="id" labelAttr="name"}}
     </select>
-    <p class="notes">{{localize "CHUD.strings.portraitHint"}}</p>
+    <p class="notes">{{localize "CHUD.strings.linkedJournalHint"}}</p>
   </div>
 </div>
