Disable banner configuration when an already existing faction was selected

--- a/css/add-edit-participant-from/banner-configuration.css
+++ b/css/add-edit-participant-from/banner-configuration.css
@@ -128,3 +128,12 @@
   color: var(--color-text-dark-primary);
 }
 /* #endregion */
+
+/* ----- View only ----- */
+/* #region */
+.participant-add-edit-form .view-only .banner-shape-button:disabled,
+.conversation-faction-sheet .view-only .banner-shape-button:disabled {
+  opacity: 0.65;
+  cursor: initial;
+}
+/* #endregion */
