Add option to scale portraits and rework portrait anchor points

--- a/templates/add_edit_participant.hbs
+++ b/templates/add_edit_participant.hbs
@@ -17,6 +17,7 @@
       {{> "modules/conversation-hud/templates/fragments/participant_data_config_tab.hbs"
         participantName=participantName
         participantImg=participantImg
+        participantImgScale=participantImgScale
       }}
     </div>
 
