--- a/templates/fragments/participant_data_config_tab.hbs
+++ b/templates/fragments/participant_data_config_tab.hbs
@@ -6,6 +6,8 @@
   <p class="notes">{{localize "CHUD.strings.nameHint"}}</p>
 </div>
 
+<hr>
+
 <div class="form-group">
   <label>{{localize "CHUD.strings.portrait"}}</label>
   <div class="form-fields">
@@ -16,6 +18,41 @@
   </div>
   <p class="notes">{{localize "CHUD.strings.portraitHint"}}</p>
 </div>
+
+<div class="form-group">
+  <label>{{localize "CHUD.strings.portraitScale.name"}}</label>
+  <div class="form-fields">
+    <input
+      type="range"
+      name="participantImgScale"
+      data-dtype="Number"
+      value="{{participantImgScale}}"
+      min="0.1"
+      max="2"
+      step="0.1"
+    />
+    <span class="range-value">{{participantImgScale}}</span>
+  </div>
+  <p class="notes">{{localize "CHUD.strings.portraitScale.hint"}}</p>
+</div>
+
+<div class="form-group">
+  <label>{{localize "CHUD.strings.portraitAnchor.vertical.name"}}</label>
+  <select name="portraitAnchorVertical">
+    {{ selectOptions anchorOptions.vertical selected=portraitAnchor.vertical nameAttr="value" labelAttr="label"}}
+  </select>
+  <p class="notes">{{localize "CHUD.strings.portraitAnchor.vertical.hint"}}</p>
+</div>
+
+<div class="form-group">
+  <label>{{localize "CHUD.strings.portraitAnchor.horizontal.name"}}</label>
+  <select name="portraitAnchorHorizontal">
+    {{ selectOptions anchorOptions.horizontal selected=portraitAnchor.horizontal nameAttr="value" labelAttr="label"}}
+  </select>
+  <p class="notes">{{localize "CHUD.strings.portraitAnchor.horizontal.hint"}}</p>
+</div>
+
+<hr>
 
 <div class="form-group">
   <label>{{localize "CHUD.strings.linkedJournal"}}</label>
