--- a/templates/add_edit_participant.hbs
+++ b/templates/add_edit_participant.hbs
@@ -16,6 +16,7 @@
     <div class="tab" data-tab="participant-config">
       {{> "modules/conversation-hud/templates/fragments/participant_data_config_tab.hbs"
         participantName=participantName
+        displayParticipantName=displayParticipantName
         participantImg=participantImg
         participantImgScale=participantImgScale
       }}
