--- a/templates/fragments/participant_data_config_tab.hbs
+++ b/templates/fragments/participant_data_config_tab.hbs
@@ -6,6 +6,18 @@
   <p class="notes">{{localize "CHUD.strings.nameHint"}}</p>
 </div>
 
+<div class="form-group">
+  <label>{{localize "CHUD.strings.displayName.name"}}</label>
+  <div class="form-fields">
+    <input
+      type="checkbox"
+      name="displayParticipantName"
+      {{checked displayParticipantName}}
+    >
+  </div>
+  <p class="notes">{{localize "CHUD.strings.displayName.hint"}}</p>
+</div>
+
 <hr>
 
 <div class="form-group">
