Localization string improvements + add WIP FR localization

--- a/templates/fragments/participant_data_config_tab.hbs
+++ b/templates/fragments/participant_data_config_tab.hbs
@@ -1,9 +1,9 @@
 <div class="form-group">
-  <label>{{localize "CHUD.strings.name"}}</label>
+  <label>{{localize "CHUD.strings.participantName.name"}}</label>
   <div class="form-fields">
     <input class="text" type="text" name="participantName" placeholder="{{localize 'CHUD.strings.newParticipant'}}" value="{{participantName}}" />
   </div>
-  <p class="notes">{{localize "CHUD.strings.nameHint"}}</p>
+  <p class="notes">{{localize "CHUD.strings.participantName.hint"}}</p>
 </div>
 
 <div class="form-group">
@@ -21,14 +21,14 @@
 <hr>
 
 <div class="form-group">
-  <label>{{localize "CHUD.strings.portrait"}}</label>
+  <label>{{localize "CHUD.strings.portrait.name"}}</label>
   <div class="form-fields">
     <button type="button" class="file-picker" data-type="imagevideo" data-target="participantImg" title="{{localize 'CHUD.strings.browseFiles'}}">
       <i class="fas fa-file-import fa-fw"></i>
     </button>
     <input class="image" type="text" name="participantImg" placeholder="{{localize 'CHUD.strings.filePath'}}" value="{{participantImg}}" />
   </div>
-  <p class="notes">{{localize "CHUD.strings.portraitHint"}}</p>
+  <p class="notes">{{localize "CHUD.strings.portrait.hint"}}</p>
 </div>
 
 <div class="form-group">
