Add option to replace participants on drop via CTRL + add setting to disable no active participant UI

--- a/templates/fragments/active_participant.hbs
+++ b/templates/fragments/active_participant.hbs
@@ -10,7 +10,7 @@
 
   {{!-- Participant display --}}
   <div
-    class="active-participant {{portraitStyle}}"
+    class="active-participant {{portraitStyle}} {{#unless (or displayParticipant displayNoParticipantBox)}}hidden{{/unless}}"
     {{#if (and displayParticipant participant.displayName)}} data-tooltip="{{participant.name}}"{{/if}}
   >
     {{#if displayParticipant}}
