Rework: Re-implement conversation sheet

--- a/css/main.css
+++ b/css/main.css
@@ -21,5 +21,7 @@
 
 /* REWORK IMPORTS */
 
+@import url("./common/index.css");
+
 /* Styling for the ConversationHUD sheets */
 @import url("./sheets/index.css");
