--- a/css/drag-and-drop/index.css
+++ b/css/drag-and-drop/index.css
@@ -1,27 +1,2 @@
-/* ----- General CSS for the drag and drop functionality ----- */
-/* #region */
-.drag-drop-indicator {
-  height: 2px;
-  border-radius: 2px;
-  width: 100%;
-  background-color: var(--color-border-highlight);
-
-  display: none;
-  pointer-events: none;
-
-  position: absolute;
-}
-
-#drag-drop-indicator-top {
-  top: 0;
-}
-#drag-drop-indicator-bottom {
-  bottom: 0;
-}
-
-.participant-drag-drop-container {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-/* #endregion */
+@import url("./dropzone.css");
+@import url("./indicators.css");
