--- a/templates/sheets/faction-sheet.hbs
+++ b/templates/sheets/faction-sheet.hbs
@@ -1,4 +1,4 @@
-<form class="sheet chud-form-content">
+<form class="sheet">
   <div class="flexrow chud-form-header">
     <input name="name" type="text" value="{{name}}" placeholder="{{localize 'CHUD.strings.documentName'}}"/>
   </div>
