--- a/css/forms/common/index.css
+++ b/css/forms/common/index.css
@@ -1,4 +1,4 @@
 @import url("./content.css");
 @import url("./footer.css");
-@import url("./headers.css");
+@import url("./header.css");
 @import url("./section.css");
